Kubernetes yml files/ingressController/helloworld-v1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-v1-deployment
spec:
  replicas: 1
  selector:
    matchLabels:  
      app:  helloworld-v1
  template:
    metadata:
      labels:
        app: helloworld-v1
    spec:
      containers:
      - name: helloworld-app
        image: varunbhatbm/nodejs-docker-demo:latest
        ports:
        - containerPort:  3000
          name: nodejs-port
---
apiVersion: v1
kind: Service
metadata:
  name: helloworld-v1
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 30304
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app:  helloworld-v1
