Kubernetes yml files/ingressController/helloworld-v2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-v2-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  helloworld-v2 
  template:
    metadata:
      labels:
        app: helloworld-v2
    spec:
      containers:
      - name: helloworld-app
        image: varunbhatbm/nodejs-docker-demo:2
        ports:
        - containerPort:  3000
          name: nodejs-port
---
apiVersion: v1
kind: Service
metadata:
  name: helloworld-v2
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 30305
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app:  helloworld-v2
